localization/v2.6.x/site/pt/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: >-
  Esta página fornece uma lista de tutoriais para interagir com Milvus e
  ferramentas de terceiros.
title: Visão geral das integrações
---
<h1 id="Integrations-Overview" class="common-anchor-header">Visão geral das integrações<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Esta página fornece uma lista de tutoriais para interagir com Milvus e ferramentas de terceiros.</p>
<table>
<thead>
<tr><th>Tutoriais</th><th>Caso de uso</th><th>Parceiros ou pilhas</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/pt/integrate_with_llamaindex.md">RAG com Milvus e LlamaIndex</a></td><td>RAG</td><td>Milvus, LLamaIndex</td></tr>
<tr><td><a href="/docs/pt/integrate_with_langchain.md">RAG com Milvus e LangChain</a></td><td>RAG</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/pt/milvus_hybrid_search_retriever.md">Milvus Hybrid Search Retriever em LangChain</a></td><td>Pesquisa híbrida</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/pt/basic_usage_langchain.md">Usar o Milvus como um armazenamento vetorial em LangChain</a></td><td>Pesquisa semântica</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/pt/full_text_search_with_langchain.md">Usando a pesquisa de texto completo com LangChain e Milvus</a></td><td>Pesquisa de texto completo</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/pt/integrate_with_haystack.md">RAG com Milvus e Haystack</a></td><td>RAG</td><td>Milvus, Haystack</td></tr>
<tr><td><a href="/docs/pt/llamaindex_milvus_async.md">RAG com Milvus e API assíncrona LlamaIndex</a></td><td>Ochestração</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/pt/milvus_rag_with_vllm.md">Construindo o RAG com Milvus, vLLM e Llama 3.1</a></td><td>RAG</td><td>Milvus, vLLM, LlamaIndex</td></tr>
<tr><td><a href="/docs/pt/llamaindex_milvus_full_text_search.md">Utilização da pesquisa de texto integral com o LlamaIndex e o Milvus</a></td><td>Pesquisa de texto completo</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/pt/dify_with_milvus.md">Implantação do Dify com Milvus</a></td><td>Ochestração</td><td>Milvus, Dify</td></tr>
<tr><td><a href="/docs/pt/rag_with_langflow.md">Construindo um sistema RAG usando Langflow com Milvus</a></td><td>Ochestration</td><td>Milvus, Langflow</td></tr>
<tr><td><a href="/docs/pt/use_milvus_in_private_gpt.md">Usar Milvus em PrivateGPT</a></td><td>Ochestration</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/use_milvus_in_docsgpt.md">Utilizar Milvus em DocsGPT</a></td><td>Ochestration</td><td>DocsGPT, Milvus</td></tr>
<tr><td><a href="/docs/pt/use_milvus_with_sambanova.md">Utilizar o Milvus com o SambaNova</a></td><td>Orquestração</td><td>Milvus, SambaNova</td></tr>
<tr><td><a href="/docs/pt/milvus_rag_with_dynamiq.md">Introdução ao Dynamiq e ao Milvus</a></td><td>Orquestração</td><td>Milvus, Dynamiq</td></tr>
<tr><td><a href="/docs/pt/llama_stack_with_milvus.md">Construir RAG com Llama Stack com Milvus</a></td><td>Orquestração</td><td>Milvus, Llama Stack</td></tr>
<tr><td><a href="/docs/pt/integrate_with_memgpt.md">Agente Chatbot com Milvus e MemGPT</a></td><td>Agente</td><td>Milvus, MemGPT</td></tr>
<tr><td><a href="/docs/pt/llama_agents_metadata.md">Sistemas multiagentes com Mistral AI, Milvus e Llama-agents</a></td><td>Agente</td><td>Milvus, Mistral AI, LlamaIndex</td></tr>
<tr><td><a href="/docs/pt/quickstart_mem0_with_milvus.md">Primeiros passos com Mem0 e Milvus</a></td><td>Agentes</td><td>Mem0, Milvus</td></tr>
<tr><td><a href="/docs/pt/integrate_with_agno.md">Integrar o Milvus com o Agno</a></td><td>Agentes</td><td>Milvus, Agno</td></tr>
<tr><td><a href="/docs/pt/milvus_and_mcp.md">MCP + Milvus: Ligar a IA a bases de dados vectoriais</a></td><td>Agentes</td><td>Milvus, MCP</td></tr>
<tr><td><a href="/docs/pt/openai_agents_milvus.md">Integração do Milvus com agentes OpenAI: Um guia passo-a-passo</a></td><td>Agentes</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/pt/integrate_with_ragas.md">Avaliação RAG com Ragas e Milvus</a></td><td>Avaliação</td><td>Milvus, Ragas</td></tr>
<tr><td><a href="/docs/pt/evaluation_with_deepeval.md">Avaliação com DeepEval</a></td><td>Avaliação e observabilidade</td><td>Milvus, DeepEval</td></tr>
<tr><td><a href="/docs/pt/evaluation_with_phoenix.md">Avaliação com Arize Pheonix</a></td><td>Avaliação e observabilidade</td><td>Milvus, Arize Pheonix</td></tr>
<tr><td><a href="/docs/pt/integrate_with_langfuse.md">Milvus em Langfuse</a></td><td>Observabilidade</td><td>Milvus, Langfuse</td></tr>
<tr><td><a href="/docs/pt/integrate_with_openai.md">Pesquisa semântica com Milvus e OpenAI</a></td><td>Pesquisa semântica</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/pt/integrate_with_cohere.md">Resposta a perguntas com Milvus e Cohere</a></td><td>Pesquisa semântica</td><td>Milvus, Cohere</td></tr>
<tr><td><a href="/docs/pt/integrate_with_hugging-face.md">Resposta a perguntas usando Milvus e HuggingFace</a></td><td>Resposta a perguntas</td><td>Milvus, HuggingFace</td></tr>
<tr><td><a href="/docs/pt/integrate_with_pytorch.md">Pesquisa de imagens usando Milvus e Pytorch</a></td><td>Pesquisa semântica</td><td>Milvus, Pytorch</td></tr>
<tr><td><a href="/docs/pt/integrate_with_sentencetransformers.md">Pesquisa de filmes usando Milvus e SentenceTransfromers</a></td><td>Pesquisa semântica</td><td>Milvus, SentenceTransformers</td></tr>
<tr><td><a href="/docs/pt/integrate_with_voxel51.md">Realizar pesquisas de visão com Milvus e FiftyOne</a></td><td>Pesquisa semântica</td><td>Milvus, FiftyOne</td></tr>
<tr><td><a href="/docs/pt/integrate_with_voyageai.md">Pesquisa semântica com Milvus e VoyageAI</a></td><td>Pesquisa semântica</td><td>Milvus, VoyageAI</td></tr>
<tr><td><a href="/docs/pt/integrate_with_bentoml.md">RAG com Milvus e BentoML</a></td><td>RAG</td><td>Milvus, BentoML</td></tr>
<tr><td><a href="/docs/pt/integrate_with_dspy.md">RAG com Milvus e DSPy</a></td><td>RAG</td><td>Milvus, DSPy</td></tr>
<tr><td><a href="/docs/pt/integrate_with_jina.md">Pesquisa semântica com Milvus e Jina</a></td><td>Pesquisa Semântica</td><td>Milvus, Jina</td></tr>
<tr><td><a href="/docs/pt/integrate_with_snowpark.md">Milvus nos serviços de contentores do Snowpark</a></td><td>Ligação de dados</td><td>Milvus, Snowpark</td></tr>
<tr><td><a href="/docs/pt/integrate_with_whyhow.md">Recuperação baseada em regras com Milvus e WhyHow</a></td><td>Resposta a perguntas</td><td>Milvus, WhyHow</td></tr>
<tr><td><a href="/docs/pt/integrate_with_fastgpt.md">Como implementar o FastGPT com o Milvus</a></td><td>RAG</td><td>Milvus, FastGPT</td></tr>
<tr><td><a href="/docs/pt/integrate_with_vanna.md">Escrever SQL com Vanna e Milvus</a></td><td>RAG</td><td>Milvus, Vanna</td></tr>
<tr><td><a href="/docs/pt/integrate_with_camel.md">RAG com Milvus e Camel</a></td><td>RAG</td><td>Milvus, Camel</td></tr>
<tr><td><a href="/docs/pt/integrate_with_airbyte.md">Airbyte &amp; Milvus: Infraestrutura de movimentação de dados de código aberto</a></td><td>Ligação de dados</td><td>Milvus, Airbyte</td></tr>
<tr><td><a href="/docs/pt/video_search_with_twelvelabs_and_milvus.md">Pesquisa avançada de vídeo: Aproveitamento de Twelve Labs e Milvus para recuperação semântica</a></td><td>Pesquisa semântica</td><td>Milvus, Twelve Labs</td></tr>
<tr><td><a href="/docs/pt/kafka-connect-milvus.md">Conectar Kafka com Milvus</a></td><td>Fontes de dados</td><td>Milvus, Kafka</td></tr>
<tr><td><a href="/docs/pt/kotaemon_with_milvus.md">Kotaemon RAG com Milvus</a></td><td>RAG</td><td>Milvus, Kotaemon</td></tr>
<tr><td><a href="/docs/pt/apify_milvus_rag.md">Geração aumentada por recuperação: Rastreio de sítios Web com o Apify e gravação de dados no Milvus para resposta a perguntas</a></td><td>Fontes de dados</td><td>Milvus, Apify</td></tr>
<tr><td><a href="/docs/pt/build_rag_on_arm.md">Construir o RAG na arquitetura Arm</a></td><td>RAG</td><td>Milvus, Arm</td></tr>
<tr><td><a href="/docs/pt/build_RAG_with_milvus_and_fireworks.md">Construir o RAG com Milvus e Fireworks AI</a></td><td>LLMs</td><td>Milvus, Fireworks AI</td></tr>
<tr><td><a href="/docs/pt/build_RAG_with_milvus_and_lepton.md">Construir RAG com Milvus e Lepton AI</a></td><td>LLMs</td><td>Milvus, Lepton AI</td></tr>
<tr><td><a href="/docs/pt/build_RAG_with_milvus_and_siliconflow.md">Construir RAG com Milvus e SiliconFlow</a></td><td>LLMs</td><td>Milvus, SiliconFlow</td></tr>
<tr><td><a href="/docs/pt/rag_with_milvus_and_unstructured.md">Construir um RAG com Milvus e fontes de dados não estruturadas</a></td><td>Estruturadas</td><td>Milvus, não estruturado</td></tr>
<tr><td><a href="/docs/pt/RAG_with_pii_and_milvus.md">Construir um RAG com Milvus + Mascarador de PII</a></td><td>Fontes de dados</td><td>Milvus, mascarador de PII</td></tr>
<tr><td><a href="/docs/pt/knowledge_table_with_milvus.md">Tabela de conhecimentos com Milvus</a></td><td>Engenharia do conhecimento</td><td>Tabela de conhecimentos, Milvus</td></tr>
<tr><td><a href="/docs/pt/build_RAG_with_milvus_and_cognee.md">Criar RAG com Milvus e Cognee</a></td><td>Engenharia do conhecimento</td><td>Milvus, Cognee</td></tr>
<tr><td><a href="/docs/pt/build_RAG_with_milvus_and_gemini.md">Construir RAG com Milvus e Gemini</a></td><td>LLMs</td><td>Milvus, Gemini</td></tr>
<tr><td><a href="/docs/pt/build_RAG_with_milvus_and_ollama.md">Construir RAG com Milvus e Ollama</a></td><td>LLMs</td><td>Milvus, Ollama</td></tr>
<tr><td><a href="/docs/pt/build_RAG_with_milvus_and_deepseek.md">Construir RAG com Milvus e DeepSeek</a></td><td>LLMs</td><td>Milvus, DeepSeek</td></tr>
<tr><td><a href="/docs/pt/build_RAG_with_milvus_and_crawl4ai.md">Criar RAG com Milvus e Crawl4AI</a></td><td>Fontes de dados</td><td>Milvus, Crawl4AI</td></tr>
<tr><td><a href="/docs/pt/build_RAG_with_milvus_and_firecrawl.md">Construindo RAG com Milvus e Firecrawl</a></td><td>Fontes de dados</td><td>Milvus, Firecrawl</td></tr>
<tr><td><a href="/docs/pt/integration_with_mindsdb.md">Integrar o Milvus com o MindsDB</a></td><td>Engenharia do conhecimento</td><td>Milvus, MindsDB</td></tr>
<tr><td><a href="/docs/pt/build_RAG_with_milvus_and_feast.md">Construir RAG com Milvus e Feast</a></td><td>Fontes de dados</td><td>Milvus, Feast</td></tr>
<tr><td><a href="/docs/pt/build_RAG_with_milvus_and_docling.md">Construir RAG com Milvus e Docling</a></td><td>Fontes de dados</td><td>Milvus, Docling</td></tr>
<tr><td><a href="/docs/pt/build_RAG_with_milvus_and_embedAnything.md">Criar RAG com Milvus e EmbedAnything</a></td><td>Incorporação</td><td>Milvus, EmbedAnything</td></tr>
<tr><td><a href="/docs/pt/milvus_and_n8n.md">Introdução ao Milvus e ao n8n</a></td><td>Orquestração</td><td>Milvus, n8n</td></tr>
<tr><td><a href="/docs/pt/use_milvus_in_anythingllm.md">Usar o Milvus no AnythingLLM</a></td><td>Orquestração</td><td>Milvus, AnythingLLM</td></tr>
<tr><td><a href="/docs/pt/NLWeb_with_milvus.md">Usando NLWeb com Milvus</a></td><td>Fontes de dados</td><td>Milvus, NLWeb</td></tr>
<tr><td><a href="/docs/pt/langextract_milvus_demo.md">Integração LangExtract + Milvus</a></td><td>Fontes de dados</td><td>Milvus, LangExtract</td></tr>
<tr><td><a href="https://colab.research.google.com/drive/1bONndT8MIxJZzzV4QTpQfU-eyWdL1Q1m?usp=sharing">Pesquisa semântica com ZeroEntropy e Milvus</a></td><td>Pesquisa semântica</td><td>Milvus, ZeroEntropy</td></tr>
<tr><td><a href="/docs/pt/langchain_milvus_dido.md">Integração da função de incorporação de texto do Milvus com LangChain</a></td><td>Incorporação de texto</td><td>Milvus, LangChain</td></tr>
<tr><td>[Construir um agente RAG de fonte dupla com Exa e Milvus]</td><td>Fontes de dados</td><td>Milvus, Exa</td></tr>
</tbody>
</table>
